fix aside position, spacing, & rename nav link

--- a/css/style.css
+++ b/css/style.css
@@ -570,6 +570,7 @@ font-style: italic;
 			filter: drop-shadow(4px 4px #030027);
 			font-family: Arial, Helvetica, sans-serif;
 			color: #f2f3d9;
+			margin-bottom:1rem;
 		}
 		.programs_buttons{
 			/* background-color:#dc9e82;
@@ -741,6 +742,14 @@ margin-bottom: 20px;
 
 /* Media queries */
 @media screen and (min-width: 280px){
+	.home{
+
+		padding: 0%;
+		margin: 0 3%;
+
+	}
+	
+
 	.home__section__info_article{
 		padding-top: 0;
 	}
@@ -865,6 +874,13 @@ display: block;
 }
 	}
 	@media screen and (min-width: 480px){
+		.home{
+
+			padding: 0%;
+			margin: 0 3%;
+
+		}
+
 		.home__section__info_article{
 			padding-top: 0;
 		}
@@ -991,6 +1007,14 @@ li{
 	
 
 	@media screen and (min-width: 650px){
+		
+		.home{
+
+			padding: 0%;
+			margin: 0 3%;
+
+		}
+
 		.policies__sprite{
 			position: relative;
 			top: -8rem;
@@ -1507,8 +1531,11 @@ li{
 			padding: 1rem;
 			/* margin-top: 1.5rem; */
 			border-radius: 5px;
-			margin: 0 5%;
-			margin-left: 0;
+	
+			
+			margin-left:5%;
+			margin-right:5%;
+		
 			}
 
 			.widget{
@@ -1680,6 +1707,8 @@ li{
 	
 	
 	@media screen and (min-width: 780px){
+		
+		
 		.home__section__info_marquee__img{
 			width: 5rem;
 		}
@@ -1713,6 +1742,7 @@ li{
 		aside{
 			grid-area: aside;
 			margin-top: 1.5rem;
+			
 		}
 		
 
@@ -1848,6 +1878,7 @@ li{
 	}
 
 	@media screen and (min-width: 960px){
+		
 		.home__section__info_marquee__img{
 			width: 6rem;
 		}
@@ -1984,6 +2015,7 @@ li{
 	
 	@media screen and (min-width: 1068px){
 	
+		
 		html{
 
 			font-size: 100%;
